confident on merge

--- a/server/views/pages/blog-list.ejs
+++ b/server/views/pages/blog-list.ejs
@@ -39,7 +39,7 @@
                     <% }) %>
                   </div>
                 <% } %>
-                <span class="btn btn-outline-accent mt-auto align-self-start">Soma zaidi</span>
+                <span class="btn btn-outline-success mt-auto align-self-start">Soma zaidi</span>
               </div>
             </a>
           </div>
