--- a/server/views/pages/login.ejs
+++ b/server/views/pages/login.ejs
@@ -25,7 +25,7 @@
         <label for="login-password" class="form-label">Nenosiri</label>
         <input type="password" class="form-control" id="login-password" name="password" required minlength="4" />
       </div>
-      <button type="submit" class="btn btn-accent w-100 d-flex align-items-center justify-content-center gap-2">
+      <button type="submit" class="btn btn-success w-100 d-flex align-items-center justify-content-center gap-2">
         Ingia
         <span
           id="login-spinner"
