--- a/server/views/pages/register.ejs
+++ b/server/views/pages/register.ejs
@@ -36,7 +36,7 @@
         <label for="register-password" class="form-label">Password</label>
         <input type="password" class="form-control" id="register-password" name="password" required minlength="4" />
       </div>
-      <button type="submit" class="btn btn-accent w-100 d-flex align-items-center justify-content-center gap-2">
+      <button type="submit" class="btn btn-success text-light w-100 d-flex align-items-center justify-content-center gap-2">
         Jisajili
         <span
           id="register-spinner"
