--- a/server/views/layouts/main.ejs
+++ b/server/views/layouts/main.ejs
@@ -49,7 +49,9 @@
           <%- body %>
         </main>
         <%- include('../partials/footer') %>
-        <%- include('../partials/modals/betwinner') %>
+        <% if (activeId !== 'vip') { %>
+         <%- include('../partials/modals/betwinner') %>
+        <% } %>
       </div>
     </div>
 
