--- a/server/views/fragments/payment-initiated.ejs
+++ b/server/views/fragments/payment-initiated.ejs
@@ -7,9 +7,6 @@
   </p>
   <div class="alert alert-info mt-3 mb-3 small" role="alert">
     <i class="fa-regular fa-circle-question me-1"></i>
-    Hakikisha namba yako iko hewani. Baada ya malipo utapokea ujumbe wa kuthibitisha na VIP kufunguliwa.
+    Hakikisha namba yako iko hewani. Baada ya malipo utapokea ujumbe wa uthibitisho na VIP kufunguliwa.
   </div>
-  <button type="button" class="btn btn-outline-secondary" onclick="window.location.reload()">
-    <i class="fa-regular fa-circle-xmark me-1"></i> Funga
-  </button>
 </div>
