--- a/server/views/fragments/payment-error.ejs
+++ b/server/views/fragments/payment-error.ejs
@@ -1,4 +1,4 @@
-<div class="alert alert-danger d-flex align-items-center" role="alert">
-  <i class="fa-solid fa-triangle-exclamation me-2"></i>
-  <div><%= message || 'Imeshindikana kushughulikia ombi lako. Jaribu tena.' %></div>
+<div class="alert alert-danger d-flex flex-column align-items-center justify-content-center" role="alert">
+  <i class="fa-solid fa-triangle-exclamation"></i>
+  <div class="text-start"><%= message || 'Imeshindikana kushughulikia ombi lako. Jaribu tena.' %></div>
 </div>
