--- a/server/views/partials/modals/payment-form.ejs
+++ b/server/views/partials/modals/payment-form.ejs
@@ -324,7 +324,7 @@
                       autocomplete="tel" required>
                   </div>
                   <div class="small text-muted mt-0 mb-1 ps-1">
-                    <i class="fa-solid fa-triangle-exclamation me-2"></i>
+                    <i class="fa-solid fa-circle-info"></i>
                     Tigo, Airtel au Halotel.
                   </div>
                 </div>
