--- a/server/views/fragments/payment-initiated.ejs
+++ b/server/views/fragments/payment-initiated.ejs
@@ -6,7 +6,7 @@
     Thibitisha kwa kuweka PIN yako.
   </p>
   <div class="alert alert-info mt-3 mb-3 small" role="alert">
-    <i class="fa-regular fa-circle-question me-1"></i>
-    Hakikisha namba yako iko hewani. Baada ya malipo utapokea ujumbe wa uthibitisho na VIP kufunguliwa.
+    <i class="fa-solid fa-circle-info me-1"></i>
+    Hakikisha namba yako iko hewani. Baada ya kukamilisha malipo utapokea ujumbe wa uthibitisho na VIP kufunguliwa.
   </div>
 </div>
