--- a/views/fragments/lipa-instructions/airtel.ejs
+++ b/views/fragments/lipa-instructions/airtel.ejs
@@ -1,9 +1,9 @@
-<div class="p-3">
+<div class="p-2">
   <%- include('./payinfo.ejs'); %>
 
   <div class="mb-3">
     <ol class="list-group list-group-numbered small shadow-sm">
-      <li class="list-group-item">Piga <strong>*150*60#</strong>, nenda Lipia Bili</li>
+      <li class="list-group-item">Airtel, Piga <strong>*150*60#</strong></li>
       <li class="list-group-item">Chagua Lipia Bili</li>
       <li class="list-group-item">Chagua Lipa kwa Simu</li>
       <li class="list-group-item">Chagua <strong>Mixx by Yas</strong></li>
