--- a/views/fragments/lipa-instructions/halotel.ejs
+++ b/views/fragments/lipa-instructions/halotel.ejs
@@ -1,9 +1,9 @@
-<div class="p-3">
+<div class="p-2">
   <%- include('./payinfo.ejs'); %>
 
   <div class="mb-3">
     <ol class="list-group list-group-numbered small shadow-sm">
-      <li class="list-group-item">Piga <strong>*150*88#</strong></li>
+      <li class="list-group-item">Halotel, Piga <strong>*150*88#</strong></li>
       <li class="list-group-item">Chagua Lipia Bidhaa</li>
       <li class="list-group-item">Chagua <strong>Mixx by Yas Lipa</strong></li>
       <li class="list-group-item">Weka lipa namba <strong class="fs-6"><code><%= network?.payCode %></code></strong></li>
