--- a/views/fragments/lipa-instructions/paynote.ejs
+++ b/views/fragments/lipa-instructions/paynote.ejs
@@ -1,6 +1,6 @@
 <div class="alert alert-warning small mb-2" role="alert">
-    Lipa kwa kutumia namba hii hii <b>(<%= phone %>)</b>. Kama pesa ipo kwenye namba tofauti au umekosea namba tafadhali funga na anza upya
+    Tumia namba yako tu <b>(<%= phone %>)</b> kulipia. Malipo yatathibitishwa moja kwa moja
 </div>
-<div class="alert alert-info small mb-0" role="alert">
+<!-- <div class="alert alert-info small mb-0" role="alert">
     Baada ya malipo, muamala wako utathibitishwa moja kwa moja, utapokea ujumbe wa uthibitisho na <strong>VIP Tips</strong> kufunguliwa.
-</div>
+</div> -->
