--- a/views/fragments/lipa-instructions/voda.ejs
+++ b/views/fragments/lipa-instructions/voda.ejs
@@ -1,9 +1,10 @@
-<div class="p-3">
+<div class="p-2">
   <%- include('./payinfo.ejs'); %>
 
   <div class="mb-3">
     <ol class="list-group list-group-numbered small shadow-sm">
-      <li class="list-group-item">Piga <strong>*150*00#</strong>, nenda Lipa kwa Mpesa</li>
+      <li class="list-group-item">Voda Piga <strong>*150*00#</strong></li>
+      <li class="list-group-item">Chagua Lipa kwa Mpesa</li>
       <li class="list-group-item">Chagua Lipa kwa Simu</li>
       <li class="list-group-item">Chagua Ingiza Lipa Namba</li>
       <li class="list-group-item">Chagua <strong>Mixx by Yas</strong></li>
