new payment flow

--- a/views/fragments/lipa-instructions/paynote.ejs
+++ b/views/fragments/lipa-instructions/paynote.ejs
@@ -1,6 +1,6 @@
 <div class="alert alert-warning small mb-2" role="alert">
-    Tumia namba yako tu <b>(<%= phone %>)</b> kulipia. Malipo yatathibitishwa moja kwa moja
+    Tumia namba yako tu <b>(<%= phone %>)</b> kulipia. Malipo hayatathibitishwa kwa wakati ukilipa kwa namba tofauti.
 </div>
-<!-- <div class="alert alert-info small mb-0" role="alert">
+<div class="alert alert-info small mb-0" role="alert">
     Baada ya malipo, muamala wako utathibitishwa moja kwa moja, utapokea ujumbe wa uthibitisho na <strong>VIP Tips</strong> kufunguliwa.
-</div> -->
+</div>
