--- a/views/fragments/lipa-instructions/voda.ejs
+++ b/views/fragments/lipa-instructions/voda.ejs
@@ -2,8 +2,9 @@
   <%- include('./payinfo.ejs'); %>
 
   <div class="mb-3">
+    <h6 class="p-2">Jinsi ya Kulipa kwa Voda</h6>
     <ol class="list-group list-group-numbered small shadow-sm">
-      <li class="list-group-item">Voda Piga <strong>*150*00#</strong></li>
+      <li class="list-group-item">Piga <strong>*150*00#</strong></li>
       <li class="list-group-item">Chagua Lipa kwa Mpesa</li>
       <li class="list-group-item">Chagua Lipa kwa Simu</li>
       <li class="list-group-item">Chagua Ingiza Lipa Namba</li>
