--- a/views/partials/modals/payment-form.ejs
+++ b/views/partials/modals/payment-form.ejs
@@ -339,7 +339,7 @@
                   </span>
                 </button>
                 <div class="text-center small text-muted mt-2 px-3">
-                  Utapata maelekezo mafupi ya kulipia. Hakikisha umeweka namba ya simu sahihi na ina pesa za kutosha kukamilisha malipo
+                  Hakikisha umeweka namba ya simu sahihi na ina salio la kutosha kabla ya kuendelea.
                 </div>
               </form>
             </div>
