--- a/views/fragments/lipa-instructions/airtel.ejs
+++ b/views/fragments/lipa-instructions/airtel.ejs
@@ -2,6 +2,7 @@
   <%- include('./payinfo.ejs'); %>
 
   <div class="mb-3">
+    <h6 class="p-2">Jinsi ya Kulipa kwa Airtel</h6>
     <ol class="list-group list-group-numbered small shadow-sm">
       <li class="list-group-item">Airtel, Piga <strong>*150*60#</strong></li>
       <li class="list-group-item">Chagua Lipia Bili</li>
