--- a/views/fragments/lipa-instructions/mixx.ejs
+++ b/views/fragments/lipa-instructions/mixx.ejs
@@ -2,6 +2,7 @@
   <%- include('./payinfo.ejs'); %>
 
   <div class="mb-3">
+    <h6 class="p-2">Jinsi ya Kulipa kwa Yas</h6>
     <ol class="list-group list-group-numbered small shadow-sm">
       <li class="list-group-item">Piga <strong>*150*01#</strong></li>
       <li class="list-group-item">Chagua Lipa kwa Simu</li>
