--- a/views/fragments/lipa-instructions/payinfo.ejs
+++ b/views/fragments/lipa-instructions/payinfo.ejs
@@ -1,4 +1,4 @@
-<div class="text-center mb-3">
+<!-- <div class="text-center mb-3">
     <h5 class="mb-1">Lipa Namba (Tigo): <code class="fw-bold"><%= network?.payCode %></code></h5>
     <div class="small text-muted">Jina: <strong><%= network?.payName %></strong></div>
-</div>
+</div> -->
