--- a/views/partials/modals/payment-form.ejs
+++ b/views/partials/modals/payment-form.ejs
@@ -289,7 +289,7 @@
 
 <div class="modal fade" id="paymentModal" tabindex="-1" aria-hidden="true" data-bs-backdrop="static"
   data-bs-keyboard="false">
-  <div class="modal-dialog modal-dialog-centered">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title"><i class="fa-solid fa-wallet me-1"></i> Malipo ya VIP</h5>
@@ -338,9 +338,6 @@
                     <span class="spinner-border spinner-custom-css" role="status" aria-hidden="true"></span>
                   </span>
                 </button>
-                <div class="text-center small text-muted mt-2 px-3">
-                  Hakikisha umeweka namba ya simu sahihi na ina salio la kutosha kabla ya kuendelea.
-                </div>
               </form>
             </div>
           </div>
